# 2026-p1-Nemix6

./: README.md  pyproject.toml
.github/workflows/: classroom.yml
src/todo/: __init__.py
src/todo/views/: routes.py
